--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -70,6 +70,14 @@ h5 {
 #whyus .card {
   height: 100%;
 }
+.back-icon {
+  position: absolute;
+  top: 20px;
+  left: 10%;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
 @media (max-width: 767px) {
   * {
     padding-left: 3px;
